--- a/index.html
+++ b/index.html
@@ -25,7 +25,25 @@
         <img src="./img/5.jpg" alt="">
     </div>
     <div class="box">
+        <img src="./img/6.jpg" alt="">
+    </div>
+    <div class="box">
+        <img src="./img/7.jpg" alt="">
+    </div>
+    <div class="box">
+        <img src="./img/8.jpg" alt="">
+    </div>
+    <div class="box">
+        <img src="./img/9.jpg" alt="">
+    </div>
+    <div class="box">
+        <img src="./img/10.jpg" alt="">
+    </div>
+    <div class="box">
         <img src="./img/images.jpg" alt="">
+    </div>
+    <div class="box">
+        <img src="./img/11.jpg" alt="">
     </div>
     </div>
 </body>
